CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
SET(PROJECT_NAME demo)
PROJECT(${PROJECT_NAME})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

MESSAGE(STATUS "Project: ${PROJECT_NAME}")
MESSAGE(STATUS "OpenCV library status:")
MESSAGE(STATUS "    version: ${OpenCV_VERSION}")
MESSAGE(STATUS "    libraries: ${OpenCV_LIBS}")
MESSAGE(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")

ADD_EXECUTABLE(show_image show_image.cpp)
TARGET_LINK_LIBRARIES(show_image ${OpenCV_LIBS})